Make Carousel Fully Responsive

--- a/index.html
+++ b/index.html
@@ -664,7 +664,31 @@
                     alt="A happy woman with a golden retriever dog"
                   />
                   <div
-                    class="position-absolute bottom-0 start-50 translate-middle"
+                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block"
+                    style="z-index: 10"
+                  >
+                    <div class="card mx-auto" style="max-width: 90%;">
+                      <div class="card-body">
+                        <figure>
+                          <blockquote class="blockquote">
+                            <p>
+                              "We couldn’t be happier with Max! Everything from
+                              the first inquiry to bringing him home was simple,
+                              clear, and totally stress-free."
+                            </p>
+                          </blockquote>
+                          <figcaption class="blockquote-footer">
+                            Meryl, Dean and Max
+                            <cite title="Source Title"
+                              >Long time dog lovers and adopters</cite
+                            >
+                          </figcaption>
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="d-block d-lg-none mt-3 text-center"
                     style="z-index: 10"
                   >
                     <div class="card mx-auto" style="max-width: 90%;">
@@ -695,7 +719,31 @@
                     alt="A happy woman with a golden retriever dog"
                   />
                   <div
-                    class="position-absolute bottom-0 start-50 translate-middle"
+                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block"
+                    style="z-index: 10"
+                  >
+                    <div class="card">
+                      <div class="card-body">
+                        <figure>
+                          <blockquote class="blockquote">
+                            <p>
+                              "Luna has brought so much joy into our lives. The
+                              adoption was incredibly straightforward — quick,
+                              honest, and handled with so much care."
+                            </p>
+                          </blockquote>
+                          <figcaption class="blockquote-footer">
+                            Kristie and Luna
+                            <cite title="Source Title"
+                              >First time dog adopter</cite
+                            >
+                          </figcaption>
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="d-block d-lg-none mt-3 text-center"
                     style="z-index: 10"
                   >
                     <div class="card">
