Add 'shadow' to Dog Card Buttons

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="text-end">
                       <a
                         href="#adoption-process"
-                        class="btn custom-button-filled"
+                        class="btn custom-button-filled shadow"
                         >Adopt Me Now!</a
                       >
                     </div>
@@ -253,7 +253,7 @@
                     <div class="text-end">
                       <a
                         href="#adoption-process"
-                        class="btn custom-button-filled"
+                        class="btn custom-button-filled shadow"
                         >Adopt Me Now!</a
                       >
                     </div>
@@ -282,7 +282,7 @@
                     <div class="text-end">
                       <a
                         href="#adoption-process"
-                        class="btn custom-button-filled"
+                        class="btn custom-button-filled shadow"
                         >Adopt Me Now!</a
                       >
                     </div>
@@ -312,7 +312,7 @@
                     <div class="text-end">
                       <a
                         href="#adoption-process"
-                        class="btn custom-button-filled"
+                        class="btn custom-button-filled shadow"
                         >Adopt Me Now!</a
                       >
                     </div>
@@ -330,7 +330,7 @@
         <div class="row">
           <div class="col-12">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+              class="bg-color-secondary display-6 text-center m-auto mt-2 col-8 col-xl-4 p-4 shadow"
             >
               Our Smaller Dogs
             </h3>
@@ -356,7 +356,7 @@
                   </p>
                   <p><em>Age:</em> 3 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -384,7 +384,7 @@
                   </p>
                   <p><em>Age:</em> 7 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -412,7 +412,7 @@
                   </p>
                   <p><em>Age:</em> 2 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -440,7 +440,7 @@
                   </p>
                   <p><em>Age:</em> 8 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -457,7 +457,7 @@
         <div class="row">
           <div class="col-12">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+              class="bg-color-secondary display-6 text-center m-auto mt-2 col-8 col-xl-4 p-4 shadow"
             >
               Larger Dogs
             </h3>
@@ -484,7 +484,7 @@
                   </p>
                   <p><em>Age:</em> 6 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -512,7 +512,7 @@
                   </p>
                   <p><em>Age:</em> 4 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -539,7 +539,7 @@
                   </p>
                   <p><em>Age:</em> 5 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -567,7 +567,7 @@
                   </p>
                   <p><em>Age:</em> 8 years old</p>
                   <div class="text-end">
-                    <a href="#adoption-process" class="btn custom-button-filled"
+                    <a href="#adoption-process" class="btn custom-button-filled shadow"
                       >Adopt Me Now!</a
                     >
                   </div>
@@ -1008,7 +1008,7 @@
       <div class="container justify-content-center">
         <div class="row justify-content-center">
           <h4
-            class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4"
+            class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4 shadow-sm"
           >
             Come and Say Hi!
           </h4>
