Tidy the HTML in the About Us Section

--- a/index.html
+++ b/index.html
@@ -103,27 +103,32 @@
 
     <!-- About Us Section -->
 
-    <div id="about-us" class="container justify-content-center">
-      <div class="row">
-        <div class="col-6 col-xl-3">
+    <div id="about-us" class="container">
+      <div class="row justify-content-center">
+        <div class="col-6 col-xl-3 mediaq-margin-top">
           <h3
-            class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
+            class="bg-color-secondary display-6 text-center m-auto p-4 shadow "
           >
             Who We Are
           </h3>
         </div>
-        <p class="m-auto col-xl-4 py-3 lead">
-          Founded in 2001 by Barry and Sheila, our shelter began with one goal:
-          to give dogs a second chance. Since then, we’ve grown into a trusted,
-          community-driven place where dogs find safety, love, and forever
-          homes.
-        </p>
-        <p class="m-auto col-xl-4 py-3 lead">
-          We’re more than a shelter—we’re a place where lasting bonds form
-          between people and pets. As we grow, we’re focused on outreach,
-          education, and building stronger community ties. Thanks for being part
-          of the journey.
-        </p>
+        <div class="col-12 col-xl-1 d-none"></div>
+        <div class="col-12 col-xl-4">
+          <p class="m-auto py-3 lead">
+            Founded in 2001 by Barry and Sheila, our shelter began with one
+            goal: to give dogs a second chance. Since then, we’ve grown into a
+            trusted, community-driven place where dogs find safety, love, and
+            forever homes.
+          </p>
+        </div>
+        <div class="col-12 col-xl-4">
+          <p class="m-auto py-3 lead">
+            We’re more than a shelter—we’re a place where lasting bonds form
+            between people and pets. As we grow, we’re focused on outreach,
+            education, and building stronger community ties. Thanks for being
+            part of the journey.
+          </p>
+        </div>
       </div>
     </div>
 
