Tidy HTML in the Our Dogs Seciton

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
     <!-- About Us Section -->
 
     <div id="about-us" class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-evenly">
         <div class="col-6 col-xl-3 mediaq-margin-top">
           <h3
-            class="bg-color-secondary display-6 text-center m-auto p-4 shadow "
+            class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
           >
             Who We Are
           </h3>
@@ -136,8 +136,8 @@
     <section id="our-dogs">
       <!-- Newest arrivals -->
 
-      <div id="newest-arrivals">
-        <div class="containerfluid bg-card-primary py-4 my-4">
+      <div id="our-pack">
+        <div class="container-fluid bg-card-primary py-4 my-4">
           <div class="row">
             <div class="container">
               <div class="row">
@@ -172,24 +172,21 @@
           </div>
         </div>
 
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-12">
-              <div class="row">
-                <div class="col-2 col-xl-4"></div>
-                <div class="col-8 col-xl-4">
-                  <h3
-                    class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
-                  >
-                    Newest Arrivals
-                  </h3>
-                </div>
-                <div class="col-2 col-xl-4"></div>
-              </div>
-            </div>
+        <!-- Newest Arrivals Section -->
 
+        <div id="newest-arrivals" class="container">
+          <div class="row justify-content-center">
+            <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+          <div class="col-12 col-md-8 col-xl-4">
+            <h3
+              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+            >
+              Newest Arrivals
+            </h3>
+          </div>
+          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
             <div class="row justify-content-center">
-              <div class="col-md-6 col-xxl-3">
+              <div class="col-12 col-md-6 col-xxl-3">
                 <div
                   class="card dog-card shadow m-auto my-3"
                   style="width: 18rem"
@@ -220,7 +217,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-xxl-3">
+              <div class="col-12 col-md-6 col-xxl-3">
                 <div
                   class="card dog-card shadow m-auto my-3"
                   style="width: 18rem"
@@ -250,7 +247,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-xxl-3">
+              <div class="col-12 col-md-6 col-xxl-3">
                 <div
                   class="card dog-card shadow m-auto my-3"
                   style="width: 18rem"
@@ -279,7 +276,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-xxl-3">
+              <div class="col-12 col-md-6 col-xxl-3">
                 <div
                   class="card dog-card shadow m-auto my-3"
                   style="width: 18rem"
@@ -315,15 +312,18 @@
       </div>
 
       <!-- Our Small Dogs -->
-      <div id="smaller-dogs" class="container justify-content-center">
-        <div class="row">
-          <div class="col-12">
+
+      <div id="smaller-dogs" class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+          <div class="col-12 col-md-8 col-xl-4">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto mt-2 col-8 col-xl-4 p-4 shadow"
+              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
             >
               Our Smaller Dogs
             </h3>
           </div>
+          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="row justify-content-center">
             <div class="col-md-6 col-xxl-3">
               <div
@@ -354,7 +354,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
@@ -384,7 +384,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
@@ -414,7 +414,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
@@ -449,17 +449,19 @@
       </div>
 
       <!-- Larger Dogs -->
-      <div id="larger-dogs" class="container justify-content-center">
-        <div class="row">
-          <div class="col-12">
+      <div id="larger-dogs" class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+          <div class="col-12 col-md-8 col-xl-4">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto mt-2 col-8 col-xl-4 p-4 shadow"
+              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
             >
-              Larger Dogs
+              Our Larger Dogs
             </h3>
           </div>
+          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="row justify-content-center">
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
@@ -489,7 +491,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
@@ -519,7 +521,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
@@ -548,7 +550,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
