Tidy HTML in Success Stories

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
     <!-- Success Story Carousel -->
 
     <section id="success-stories">
-      <div class="containerfluid bg-card-primary py-4 my-4">
+      <div class="container-fluid bg-card-primary py-4 my-4">
         <div class="row">
           <div class="container">
             <div class="row">
@@ -619,8 +619,10 @@
           </div>
         </div>
       </div>
-      <div class="container justify-content-center my-3">
-        <div class="row">
+
+      <!-- Carousel Section -->
+      <div class="container my-3">
+        <div class="row justify-content-center">
           <div class="col-12">
             <!-- Carousel Start -->
             <div id="carousel-success-stories" class="carousel slide my-3">
