--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <!-- Our Dogs Seciton -->
     <section id="our-dogs">
-      <!-- Newest arrivals -->
+      <!-- Intro -->
 
       <div id="our-pack">
         <div class="container-fluid bg-card-primary py-4 my-4">
@@ -177,14 +177,14 @@
         <div id="newest-arrivals" class="container">
           <div class="row justify-content-center">
             <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
-          <div class="col-12 col-md-8 col-xl-4">
-            <h3
-              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
-            >
-              Newest Arrivals
-            </h3>
-          </div>
-          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+            <div class="col-12 col-md-8 col-xl-4">
+              <h3
+                class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+              >
+                Newest Arrivals
+              </h3>
+            </div>
+            <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
             <div class="row justify-content-center">
               <div class="col-12 col-md-6 col-xxl-3">
                 <div
@@ -314,6 +314,7 @@
       <!-- Our Small Dogs -->
 
       <div id="smaller-dogs" class="container">
+        <!-- Intro -->
         <div class="row justify-content-center">
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="col-12 col-md-8 col-xl-4">
@@ -324,8 +325,9 @@
             </h3>
           </div>
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+          <!--Cards -->
           <div class="row justify-content-center">
-            <div class="col-md-6 col-xxl-3">
+            <div class="col-12 col-md-6 col-xxl-3">
               <div
                 class="card dog-card shadow m-auto my-3"
                 style="width: 18rem"
@@ -846,10 +848,10 @@
     </section>
 
     <!-- Adopt Section -->
-    <!-- Adoption Cards -->
+    <!-- Adoption intro -->
 
     <section id="adoption-process">
-      <div class="containerfluid bg-card-primary py-4 my-4">
+      <div class="container-fluid bg-card-primary py-4 my-4">
         <div class="row">
           <div class="container">
             <div class="row">
@@ -881,17 +883,19 @@
           </div>
         </div>
       </div>
-
+      <!-- Adoption Cards -->
       <div class="container">
-        <div class="row mb-4">
-          <div class="col-12 mb-4">
+        <div class="row">
+          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+          <div class="col-12 col-md-8 col-xl-4">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 mb-4 shadow"
             >
               Adoption in 4 Easy Steps
             </h3>
           </div>
-          <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+          <div class="col-12 col-md-6 col-xxl-3 mb-2">
             <div class="card m-auto shadow" style="width: 20rem">
               <div class="card-header h4 bg-card-primary card-text-title">
                 1. Fill Out Our Online Form
@@ -905,7 +909,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="col-12 col-md-6 col-xxl-3 mb-2">
             <div class="card m-auto shadow" style="width: 20rem">
               <div class="card-header h4 bg-card-primary card-text-title">
                 2. Meet Your Match
@@ -918,7 +922,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="col-12 col-md-6 col-xxl-3 mb-2">
             <div class="card m-auto shadow" style="width: 20rem">
               <div class="card-header h4 bg-card-primary card-text-title">
                 3. Home Check & Approval
@@ -931,7 +935,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-xxl-3 mb-2">
+          <div class="col-12 col-md-6 col-xxl-3 mb-2">
             <div class="card m-auto shadow" style="width: 20rem">
               <div class="card-header h4 bg-card-primary card-text-title">
                 4. Take Them Home
@@ -952,31 +956,33 @@
 
     <section id="adoption-form" class="container">
       <div class="row">
-        <div class="col-12 mb-4">
+        <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
+        <div class="col-12 col-md-8 col-xl-4">
           <h3
-            class="bg-color-secondary display-6 text-center m-auto col-8 col-xl-4 p-4 shadow"
+            class="bg-color-secondary display-6 text-center m-auto mt-4 p-4 mb-4 shadow"
           >
-            Let's Get Started!
+            Let's Get Started
           </h3>
         </div>
+        <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
         <form class="row g-3 m-auto">
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <label for="full-name" class="form-label">Full Name</label>
             <input type="text" class="form-control" id="full-name" />
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" />
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <label for="phone-number" class="form-label">Phone Number</label>
             <input type="tel" class="form-control" id="phone-number" />
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <label for="d-o-b" class="form-label">Date of Birth</label>
             <input type="date" class="form-control" id="d-o-b" />
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <label for="breed-preference" class="form-label"
               >Breed Preference</label
             >
@@ -994,13 +1000,12 @@
               <option value="Yorkshire Terrier"></option>
             </datalist>
           </div>
-          <div class="col-md-6">
+          <div class="col-12 col-md-6">
             <label for="message" class="form-label"
               >Want to share anything with us?</label
             >
             <input type="text-area" class="form-control" id="message" />
           </div>
-
           <div class="col-12 text-end">
             <button type="submit" class="btn custom-button-filled mb-4 shadow">
               Submit!
