Tidy HTML in the Footer

--- a/index.html
+++ b/index.html
@@ -1017,20 +1017,26 @@
 
     <!-- Footer -->
     <footer class="container-fluid">
-      <div class="container justify-content-center">
+      <div class="container">
+        <!-- Title -->
         <div class="row justify-content-center">
-          <h4
-            class="col-8 col-md-6 col-xl-5 text-center display-6 bg-color-secondary mt-3 p-4 shadow-sm"
-          >
-            Come and Say Hi!
-          </h4>
+          <div class="col-12 col-md-2 col-xl-3 d-none d-md-block"></div>
+            <div class="col-12 col-md-8 col-xl-6">
+              <h3
+                class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+              >
+                Come and Say Hi!
+              </h3>
+            </div>
+            <div class="col-12 col-md-2 col-xl-3 d-none d-md-block"></div>
         </div>
+        <!-- Seciton -->
         <div class="row justify-content-center">
-          <p class="col-xl-6 text-center p-4">
+          <p class="col-12 col-xl-6 text-center p-4">
             We’d love for you to come by, have a look around, and see it all for
             yourself. Don’t be shy — stop in and say hi!
           </p>
-          <div class="col-xl-5">
+          <div class="col-12 col-xl-6">
             <table
               class="table table-dark border-light custom-table"
               id="opening-times"
@@ -1065,11 +1071,11 @@
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
-            class="col-xl-9"
+            class="col-12 col-xl-9"
           ></iframe>
-          <div class="col-xl-3">
+          <div class="col-12 col-xl-3">
             <div class="row p-3">
-              <div class="col-6 col-xl-12">
+              <div class="col-5 col-md-6 col-xl-12">
                 <p>
                   <i class="fa-solid fa-location-dot"></i> Address: <br />
                   2 Whatcote Rd<br />
@@ -1079,7 +1085,7 @@
                   England UK
                 </p>
               </div>
-              <div class="col-6 col-xl-12">
+              <div class="col-7 col-md-6 col-xl-12">
                 <div class="row">
                   <p class="col-12">
                     <i class="fa-solid fa-phone"></i> Telephone Number: <br />
