--- a/index.html
+++ b/index.html
@@ -47,15 +47,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link active" href="#our-dogs">Ours Stars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#our-dogs">Ours Stars</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Get Involved</a>
+              <a class="nav-link active" href="#">Get Involved</a>
             </li>
             <li class="nav-item">
               <a class="btn custom-button-filled" href="#adoption-process"
@@ -74,9 +69,9 @@
         <img
           src="assets/images/hero-image.webp"
           alt="dogs paw next to mans hand"
-          class="col-xl-7 p-0 mt-3"
+          class="col-12 col-xl-7 p-0 mt-3"
         />
-        <div class="col-xl-4 container">
+        <div class="col-12 col-xl-4 container">
           <div id="spacer-top" class="row">
             <div classs="col-12">
               <h2
