Change Success Story Text to Match New Pics

--- a/index.html
+++ b/index.html
@@ -716,15 +716,15 @@
                         <figure>
                           <blockquote class="blockquote">
                             <p>
-                              "We couldn’t be happier with Max! Everything from
+                              "I couldn’t be happier with Max! Everything from
                               the first inquiry to bringing him home was simple,
                               clear, and stress-free."
                             </p>
                           </blockquote>
                           <figcaption class="blockquote-footer">
-                            Meryl, Dean and Max
+                            Dean and Max
                             <cite title="Source Title"
-                              >Long time dog lovers and adopters</cite
+                              >Long time dog lover and adopter</cite
                             >
                           </figcaption>
                         </figure>
@@ -740,15 +740,15 @@
                         <figure>
                           <blockquote class="blockquote">
                             <p>
-                              "We couldn’t be happier with Max! Everything from
+                              "I couldn’t be happier with Max! Everything from
                               the first inquiry to bringing him home was simple,
                               clear, and stress-free."
                             </p>
                           </blockquote>
                           <figcaption class="blockquote-footer">
-                            Meryl, Dean and Max
+                            Dean and Max
                             <cite title="Source Title"
-                              >Long time dog lovers and adopters</cite
+                              >Long time dog lover and adopter</cite
                             >
                           </figcaption>
                         </figure>
