--- a/index.html
+++ b/index.html
@@ -896,7 +896,6 @@
                 1. Fill Out Our Online Form
               </div>
               <div class="card-body">
-                <h5 class="card-title"></h5>
                 <p class="card-text">
                   Please share preferences with us as this helps us match you
                   with the right dog!
@@ -978,10 +977,10 @@
             <input type="date" class="form-control" id="d-o-b" />
           </div>
           <div class="col-12 col-md-6">
-            <label for="breed-preference" class="form-label"
-              >Breed Preference</label
-            >
-            <input class="form-control" list="breeds" id="breed" name="breed" />
+            <label for="breed-preference" class="form-label">
+              Breed Preference
+            </label>
+            <input class="form-control" list="breeds" id="breed-preference" name="breed" />
             <datalist id="breeds">
               <option value="Labrador Retriever"></option>
               <option value="German Shepherd"></option>
@@ -1016,14 +1015,14 @@
         <!-- Title -->
         <div class="row justify-content-center">
           <div class="col-12 col-md-2 col-xl-3 d-none d-md-block"></div>
-            <div class="col-12 col-md-8 col-xl-6">
-              <h3
-                class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
-              >
-                Come and Say Hi!
-              </h3>
-            </div>
-            <div class="col-12 col-md-2 col-xl-3 d-none d-md-block"></div>
+          <div class="col-12 col-md-8 col-xl-6">
+            <h3
+              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+            >
+              Come and Say Hi!
+            </h3>
+          </div>
+          <div class="col-12 col-md-2 col-xl-3 d-none d-md-block"></div>
         </div>
         <!-- Seciton -->
         <div class="row justify-content-center">
@@ -1067,6 +1066,7 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
             class="col-12 col-xl-9"
+            title="Google Map of Oxhill, Warwick"
           ></iframe>
           <div class="col-12 col-xl-3">
             <div class="row p-3">
@@ -1103,30 +1103,30 @@
               class="col-1 text-center h3"
               href="https://facebook.com/"
               target="_blank"
-              rel="noopener"
-              ><i class="fab fa-facebook fa-lg"></i
-            ></a>
+              rel="noopener">
+              <i class="fab fa-facebook fa-lg"></i>
+              <span class="sr-only">Visit our Facebook Page</span>
+            </a>
             <a
               class="col-1 text-center h3"
               href="https://instagram.com/"
               target="_blank"
               rel="noopener"
               ><i class="fab fa-instagram fa-lg"></i
-            ></a>
+            ><span class="sr-only">Visit our Instagram Page</span></a>
             <a
               class="col-1 text-center h3"
               href="https://x.com/"
               target="_blank"
               rel="noopener"
-              ><i class="fab fa-twitter fa-lg"></i
-            ></a>
+              ><i class="fa-brands fa-square-x-twitter"></i><span class="sr-only">Visit our X Page</span></a>
             <a
               class="col-1 text-center h3"
               href="https://linkedin.com/"
               target="_blank"
               rel="noopener"
               ><i class="fab fa-linkedin fa-lg"></i
-            ></a>
+            ><span class="sr-only">Visit our Linked In Page</span></a>
           </div>
         </div>
       </div>
