Make #about Section Full Screen

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
       </div>
     </nav>
 
-    <!-- Header -->
+<!-- About Us Section -->
 
-    <header id="header" class="image-wrapper container">
+    <section id="about">
+    <div id="hero-intro" class="image-wrapper container">
       <div id="hero" class="row justify-content-center">
         <img
           src="assets/images/hero-image.webp"
@@ -94,10 +95,7 @@
           </div>
         </div>
       </div>
-    </header>
-
-    <!-- About Us Section -->
-
+    </div>
     <div id="about-us" class="container">
       <div class="row justify-content-evenly">
         <div class="col-6 col-xl-3 mediaq-margin-top">
@@ -126,7 +124,7 @@
         </div>
       </div>
     </div>
-
+</section>
     <!-- Our Dogs Seciton -->
     <section id="our-dogs">
       <!-- Intro -->
