--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="#our-dogs">Ours Stars</a>
+              <a class="nav-link active" href="#our-dogs">Our Pack</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Get Involved</a>
+              <a class="nav-link active" href="#success-stories">Success Stories</a>
             </li>
             <li class="nav-item">
               <a class="btn custom-button-filled" href="#adoption-process"
