--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Title and meta description -->
-    <title>A Tale of Two Hearts | Home</title>
     <meta
       name="description"
       content="A Tail of Two Hearts is the dog adoption most trusted favourite to give you your happily ever after forever best friend"
@@ -19,6 +17,7 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <title>A Tale of Two Hearts | Home</title>
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -50,7 +49,9 @@
               <a class="nav-link active" href="#our-dogs">Our Pack</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#success-stories">Success Stories</a>
+              <a class="nav-link active" href="#success-stories"
+                >Success Stories</a
+              >
             </li>
             <li class="nav-item">
               <a class="btn custom-button-filled" href="#adoption-process"
@@ -62,69 +63,69 @@
       </div>
     </nav>
 
-<!-- About Us Section -->
+    <!-- About Us Section -->
 
     <section id="about">
-    <div id="hero-intro" class="image-wrapper container">
-      <div id="hero" class="row justify-content-center">
-        <img
-          src="assets/images/hero-image.webp"
-          alt="dogs paw next to mans hand"
-          class="col-12 col-xl-7 p-0 mt-3"
-        />
-        <div class="col-12 col-xl-4 container">
-          <div id="spacer-top" class="row">
-            <div classs="col-12">
-              <h2
-                class="display-6 text-center bg-color-primary p-4 mt-3 shadow"
-              >
-                Helping Dogs find their Forever Families...
-              </h2>
+      <div id="hero-intro" class="image-wrapper container">
+        <div id="hero" class="row justify-content-center">
+          <img
+            src="assets/images/hero-image.webp"
+            alt="dogs paw next to mans hand"
+            class="col-12 col-xl-7 p-0 mt-3"
+          />
+          <div class="col-12 col-xl-4 container">
+            <div id="spacer-top" class="row">
+              <div classs="col-12">
+                <h2
+                  class="display-6 text-center bg-color-primary p-4 mt-3 shadow"
+                >
+                  Helping Dogs find their Forever Families...
+                </h2>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <p class="text-center mt-2 lead">
-                Established in 2001, our shelter began as a small, heartfelt
-                effort by Barry and Sheila—two lifelong dog lovers—who believed
-                every dog deserves a safe, loving home. What started as a
-                passion project has since grown into a trusted local hub for
-                rescue, rehabilitation, and adoption.
-              </p>
+            <div class="row">
+              <div class="col-12">
+                <p class="text-center mt-2 lead">
+                  Established in 2001, our shelter began as a small, heartfelt
+                  effort by Barry and Sheila—two lifelong dog lovers—who
+                  believed every dog deserves a safe, loving home. What started
+                  as a passion project has since grown into a trusted local hub
+                  for rescue, rehabilitation, and adoption.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div id="about-us" class="container">
-      <div class="row justify-content-evenly">
-        <div class="col-6 col-xl-3 mediaq-margin-top">
-          <h3
-            class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
-          >
-            Who We Are
-          </h3>
-        </div>
-        <div class="col-12 col-xl-1 d-none"></div>
-        <div class="col-12 col-xl-4">
-          <p class="m-auto py-3 lead">
-            Founded in 2001 by Barry and Sheila, our shelter began with one
-            goal: to give dogs a second chance. Since then, we’ve grown into a
-            trusted, community-driven place where dogs find safety, love, and
-            forever homes.
-          </p>
-        </div>
-        <div class="col-12 col-xl-4">
-          <p class="m-auto py-3 lead">
-            We’re more than a shelter—we’re a place where lasting bonds form
-            between people and pets. As we grow, we’re focused on outreach,
-            education, and building stronger community ties. Thanks for being
-            part of the journey.
-          </p>
+      <div id="about-us" class="container">
+        <div class="row justify-content-evenly">
+          <div class="col-6 col-xl-3 mediaq-margin-top">
+            <h3
+              class="bg-color-secondary display-6 text-center m-auto p-4 shadow"
+            >
+              Who We Are
+            </h3>
+          </div>
+          <div class="col-12 col-xl-1 d-none"></div>
+          <div class="col-12 col-xl-4">
+            <p class="m-auto py-3 lead">
+              Founded in 2001 by Barry and Sheila, our shelter began with one
+              goal: to give dogs a second chance. Since then, we’ve grown into a
+              trusted, community-driven place where dogs find safety, love, and
+              forever homes.
+            </p>
+          </div>
+          <div class="col-12 col-xl-4">
+            <p class="m-auto py-3 lead">
+              We’re more than a shelter—we’re a place where lasting bonds form
+              between people and pets. As we grow, we’re focused on outreach,
+              education, and building stronger community ties. Thanks for being
+              part of the journey.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-</section>
+    </section>
     <!-- Our Dogs Seciton -->
     <section id="our-dogs">
       <!-- Intro -->
@@ -960,25 +961,31 @@
         <form class="row g-3 m-auto" action="success.html" method="GET">
           <div class="col-12 col-md-6">
             <label for="full-name" class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="full-name" required/>
+            <input type="text" class="form-control" id="full-name" required />
           </div>
           <div class="col-12 col-md-6">
             <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" required/>
+            <input type="email" class="form-control" id="email" required />
           </div>
           <div class="col-12 col-md-6">
             <label for="phone-number" class="form-label">Phone Number</label>
-            <input type="tel" class="form-control" id="phone-number" required/>
+            <input type="tel" class="form-control" id="phone-number" required />
           </div>
           <div class="col-12 col-md-6">
             <label for="d-o-b" class="form-label">Date of Birth</label>
-            <input type="date" class="form-control" id="d-o-b" required/>
+            <input type="date" class="form-control" id="d-o-b" required />
           </div>
           <div class="col-12 col-md-6">
             <label for="breed-preference" class="form-label">
               Breed Preference
             </label>
-            <input class="form-control" list="breeds" id="breed-preference" name="breed" required/>
+            <input
+              class="form-control"
+              list="breeds"
+              id="breed-preference"
+              name="breed"
+              required
+            />
             <datalist id="breeds">
               <option value="Labrador Retriever"></option>
               <option value="German Shepherd"></option>
@@ -1101,7 +1108,8 @@
               class="col-1 text-center h3"
               href="https://facebook.com/"
               target="_blank"
-              rel="noopener">
+              rel="noopener"
+            >
               <i class="fab fa-facebook fa-lg"></i>
               <span class="sr-only">Visit our Facebook Page</span>
             </a>
@@ -1111,20 +1119,24 @@
               target="_blank"
               rel="noopener"
               ><i class="fab fa-instagram fa-lg"></i
-            ><span class="sr-only">Visit our Instagram Page</span></a>
+              ><span class="sr-only">Visit our Instagram Page</span></a
+            >
             <a
               class="col-1 text-center h3"
               href="https://x.com/"
               target="_blank"
               rel="noopener"
-              ><i class="fa-brands fa-square-x-twitter"></i><span class="sr-only">Visit our X Page</span></a>
+              ><i class="fa-brands fa-square-x-twitter"></i
+              ><span class="sr-only">Visit our X Page</span></a
+            >
             <a
               class="col-1 text-center h3"
               href="https://linkedin.com/"
               target="_blank"
               rel="noopener"
               ><i class="fab fa-linkedin fa-lg"></i
-            ><span class="sr-only">Visit our Linked In Page</span></a>
+              ><span class="sr-only">Visit our Linked In Page</span></a
+            >
           </div>
         </div>
       </div>
