Remove HTML Style from Dog Cards

--- a/index.html
+++ b/index.html
@@ -181,10 +181,7 @@
             <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
             <div class="row justify-content-center">
               <div class="col-12 col-md-6 col-xxl-3">
-                <div
-                  class="card dog-card shadow m-auto my-3"
-                  style="width: 18rem"
-                >
+                <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/new-arrival-1.webp"
                     class="card-img-top"
@@ -212,10 +209,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-6 col-xxl-3">
-                <div
-                  class="card dog-card shadow m-auto my-3"
-                  style="width: 18rem"
-                >
+                <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/new-arrival-2.webp"
                     class="card-img-top"
@@ -242,10 +236,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-6 col-xxl-3">
-                <div
-                  class="card dog-card shadow m-auto my-3"
-                  style="width: 18rem"
-                >
+                <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/new-arrival-3.webp"
                     class="card-img-top"
@@ -271,10 +262,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-6 col-xxl-3">
-                <div
-                  class="card dog-card shadow m-auto my-3"
-                  style="width: 18rem"
-                >
+                <div class="card dog-card shadow m-auto my-3">
                   <img
                     src="assets/images/new-arrival-4.webp"
                     class="card-img-top"
@@ -322,10 +310,7 @@
           <!--Cards -->
           <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/smaller-dog-1.webp"
                   class="card-img-top"
@@ -351,10 +336,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/smaller-dog-2.webp"
                   class="card-img-top"
@@ -381,10 +363,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/smaller-dog-3.webp"
                   class="card-img-top"
@@ -411,10 +390,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/smaller-dog-4.webp"
                   class="card-img-top"
@@ -458,10 +434,7 @@
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/bigger-dog-1.webp"
                   class="card-img-top"
@@ -488,10 +461,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/bigger-dog-2.webp"
                   class="card-img-top"
@@ -518,10 +488,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/bigger-dog-3.webp"
                   class="card-img-top"
@@ -547,10 +514,7 @@
               </div>
             </div>
             <div class="col-12 col-md-6 col-xxl-3">
-              <div
-                class="card dog-card shadow m-auto my-3"
-                style="width: 18rem"
-              >
+              <div class="card dog-card shadow m-auto my-3">
                 <img
                   src="assets/images/bigger-dog-4.webp"
                   class="card-img-top"
