Take HTML Style Out of  Scuccess Stories and Add max width on Cards for <=md Screens

--- a/index.html
+++ b/index.html
@@ -616,10 +616,9 @@
                     alt="A happy woman with a cross-breed dog"
                   />
                   <div
-                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block"
-                    style="z-index: 10"
+                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block z-index"
                   >
-                    <div class="card shadow">
+                    <div class="card shadow mx-auto">
                       <div class="card-body">
                         <figure>
                           <blockquote class="blockquote">
@@ -639,12 +638,9 @@
                       </div>
                     </div>
                   </div>
-                  <div
-                    class="d-block d-lg-none mt-3 text-center"
-                    style="z-index: 10"
-                  >
-                    <div class="card shadow">
-                      <div class="card-body shadow">
+                  <div class="d-block d-lg-none mt-3 text-center z-index">
+                    <div class="card mx-auto car-width">
+                      <div class="card-body ">
                         <figure>
                           <blockquote class="blockquote">
                             <p>
@@ -667,14 +663,13 @@
                 <div class="carousel-item position-relative">
                   <img
                     src="assets/images/success-story-2.webp"
-                    class="d-block w-100 max-height"
+                    class="d-block w-100 max-height shadow-sm"
                     alt="A happy woman with a golden retriever dog"
                   />
                   <div
-                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block"
-                    style="z-index: 10"
+                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block z-index"
                   >
-                    <div class="card mx-auto" style="max-width: 90%">
+                    <div class="card mx-auto">
                       <div class="card-body">
                         <figure>
                           <blockquote class="blockquote">
@@ -694,11 +689,8 @@
                       </div>
                     </div>
                   </div>
-                  <div
-                    class="d-block d-lg-none mt-3 text-center"
-                    style="z-index: 10"
-                  >
-                    <div class="card mx-auto" style="max-width: 90%">
+                  <div class="d-block d-lg-none mt-3 text-center z-index">
+                    <div class="card mx-auto car-width">
                       <div class="card-body">
                         <figure>
                           <blockquote class="blockquote">
@@ -722,14 +714,13 @@
                 <div class="carousel-item position-relative">
                   <img
                     src="assets/images/success-story-3.webp"
-                    class="d-block w-100 max-height"
+                    class="d-block w-100 max-height shadow-sm"
                     alt="A happy woman with a golden retriever dog"
                   />
                   <div
-                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block"
-                    style="z-index: 10"
+                    class="position-absolute bottom-0 start-50 translate-middle d-none d-lg-block z-index"
                   >
-                    <div class="card">
+                    <div class="card mx-auto">
                       <div class="card-body">
                         <figure>
                           <blockquote class="blockquote">
@@ -749,11 +740,8 @@
                       </div>
                     </div>
                   </div>
-                  <div
-                    class="d-block d-lg-none mt-3 text-center"
-                    style="z-index: 10"
-                  >
-                    <div class="card">
+                  <div class="d-block d-lg-none mt-3 text-center z-index">
+                    <div class="card mx-auto car-width">
                       <div class="card-body">
                         <figure>
                           <blockquote class="blockquote">
