--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
           </div>
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="col-12 col-md-6 col-xxl-3 mb-2">
-            <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card m-auto shadow adoption-card">
               <div class="card-header h4 bg-card-primary card-text-title">
                 1. Fill Out Our Online Form
               </div>
@@ -855,7 +855,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-xxl-3 mb-2">
-            <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card m-auto shadow adoption-card">
               <div class="card-header h4 bg-card-primary card-text-title">
                 2. Meet Your Match
               </div>
@@ -868,7 +868,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-xxl-3 mb-2">
-            <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card m-auto shadow adoption-card">
               <div class="card-header h4 bg-card-primary card-text-title">
                 3. Home Check & Approval
               </div>
@@ -881,7 +881,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 col-xxl-3 mb-2">
-            <div class="card m-auto shadow" style="width: 20rem">
+            <div class="card m-auto shadow adoption-card">
               <div class="card-header h4 bg-card-primary card-text-title">
                 4. Take Them Home
               </div>
