Change Nav Text and Connect Links

--- a/success.html
+++ b/success.html
@@ -27,7 +27,9 @@
     >
       <div class="container">
         <a class="navbar-brand" href="index.html"
-          ><h1 class="display-4">A Tail of Two Hearts</h1></a
+          ><h1 class="display-4">
+            <i class="fa-solid fa-paw"></i> A Tail of Two Hearts
+          </h1></a
         >
         <button
           class="navbar-toggler"
@@ -43,19 +45,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link active" href="index.html#our-dogs">Our Pack</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="our-dogs.html">Ours Stars</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="get-involved.html">Get Involved</a>
+              <a class="nav-link active" href="index.html#success-stories"
+                >Success Stories</a
+              >
             </li>
             <li class="nav-item">
               <a
-                class="btn custom-button-filled shadow"
-                aria-current="page"
-                href="adoption-form.html"
+                class="btn custom-button-filled"
+                href="index.html#adoption-process"
                 >Adopt Now!</a
               >
             </li>
