--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
       name="description"
       content="A Tail of Two Hearts is the dog adoption most trusted favourite to give you your happily ever after forever best friend"
     />
+    <!-- Favicon -->
 
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <!-- Bootstrap Link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
@@ -131,7 +150,7 @@
       <!-- Intro -->
 
       <div id="our-pack">
-        <div class="container-fluid bg-card-primary py-4 my-4">
+        <div class="container-fluid bg-card-primary py-5 my-5">
           <div class="row">
             <div class="container">
               <div class="row">
@@ -173,7 +192,7 @@
             <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
             <div class="col-12 col-md-8 col-xl-4">
               <h3
-                class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+                class="bg-color-secondary display-6 text-center mx-auto my-5 p-4 shadow"
               >
                 Newest Arrivals
               </h3>
@@ -301,7 +320,7 @@
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="col-12 col-md-8 col-xl-4">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+              class="bg-color-secondary display-6 text-center mx-auto my-5 p-4 shadow"
             >
               Our Smaller Dogs
             </h3>
@@ -426,13 +445,13 @@
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="col-12 col-md-8 col-xl-4">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+              class="bg-color-secondary display-6 text-center mx-auto my-5 p-4 shadow"
             >
               Our Larger Dogs
             </h3>
           </div>
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
-          <div class="row justify-content-center">
+          <div class="row justify-content-center mb-5">
             <div class="col-12 col-md-6 col-xxl-3">
               <div class="card dog-card shadow m-auto my-3">
                 <img
