--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
     <!-- Success Story Carousel -->
 
     <section id="success-stories">
-      <div class="container-fluid bg-card-primary py-4 my-4">
+      <div class="container-fluid bg-card-primary py-5 my-5">
         <div class="row">
           <div class="container">
             <div class="row">
@@ -601,7 +601,7 @@
 
       <!-- Carousel Section -->
       <div class="container my-3">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center my-5">
           <div class="col-12">
             <!-- Carousel Start -->
             <div id="carousel-success-stories" class="carousel slide my-3">
