Add Padding and Margin to Adoption Seciton

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
     <!-- Adoption intro -->
 
     <section id="adoption-process">
-      <div class="container-fluid bg-card-primary py-4 my-4">
+      <div class="container-fluid bg-card-primary py-5 my-5">
         <div class="row">
           <div class="container">
             <div class="row">
@@ -850,11 +850,11 @@
       </div>
       <!-- Adoption Cards -->
       <div class="container">
-        <div class="row">
+        <div class="row my-5">
           <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
           <div class="col-12 col-md-8 col-xl-4">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 mb-4 shadow"
+              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 my-5 shadow"
             >
               Adoption in 4 Easy Steps
             </h3>
@@ -918,7 +918,7 @@
 
     <!-- Adoption Form -->
 
-    <section id="adoption-form" class="container">
+    <section id="adoption-form" class="container my-5">
       <div class="row">
         <div class="col-12 col-md-2 col-xl-4 d-none d-md-block"></div>
         <div class="col-12 col-md-8 col-xl-4">
