--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
           <div class="col-12 col-md-2 col-xl-3 d-none d-md-block"></div>
           <div class="col-12 col-md-8 col-xl-6">
             <h3
-              class="bg-color-secondary display-6 text-center m-auto mt-2 p-4 shadow"
+              class="bg-color-secondary display-6 text-center m-auto my-5 p-4 shadow"
             >
               Come and Say Hi!
             </h3>
@@ -1002,13 +1002,13 @@
         </div>
         <!-- Seciton -->
         <div class="row justify-content-center">
-          <p class="col-12 col-xl-6 text-center p-4">
+          <p class="col-12 col-xl-6 text-center p-4 mb-4">
             We’d love for you to come by, have a look around, and see it all for
             yourself. Don’t be shy — stop in and say hi!
           </p>
           <div class="col-12 col-xl-6">
             <table
-              class="table table-dark border-light custom-table"
+              class="table table-dark border-light custom-table mb-4"
               id="opening-times"
             >
               <thead>
@@ -1040,7 +1040,7 @@
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
-            class="col-12 col-xl-9"
+            class="col-12 col-xl-9 my-4"
             title="Google Map of Oxhill, Warwick"
           ></iframe>
           <div class="col-12 col-xl-3">
